--- a/21-01-2021/login.html
+++ b/21-01-2021/login.html
@@ -17,6 +17,9 @@
         <div class="row">
             <div class="col-3"></div>
             <div class="col-6">
+                <center>
+                    <h1>LOGIN</h1>
+                </center>
                 <form>
                     <div class="form-group">
                         <label for="txtEmail"></label>
@@ -27,10 +30,13 @@
                         <input type="password" name="txtPassword" id="txtPassword" class="form-control" placeholder="Password" required>
                     </div>
 
+                    <label id="msg" class="alert-danger form-control" hidden></label>
+
                     <div class="form-group">
-                        <button class="btn btn-primary form-control" name="btnLogin" id="btnLogin">LOGIN</button>
+                        <button type="button" class="btn btn-primary form-control" name="btnLogin" id="btnLogin" onclick="login()">LOGIN</button>
                     </div>
                 </form>
+
                 <a href="registeration.html" class="btn btn-primary form-control">REGISTER NOW</a>
             </div>
             <div class="col-3"></div>
@@ -47,7 +53,16 @@
         }
 
         function login() {
+            var email = document.getElementById("txtEmail").value;
+            var pass = document.getElementById("txtPassword").value;
 
+            if (email != "" && pass != "") {
+
+            } else {
+                document.getElementById("msg").innerHTML = "Please Enter Email id & Password";
+                document.getElementById("msg").hidden = false;
+                document.getElementById("msg").focus();
+            }
         }
     </script>
 
