--- a/21-01-2021/admin/loginSession.html
+++ b/21-01-2021/admin/loginSession.html
@@ -36,7 +36,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link logout">Logout</a>
+                <a class="nav-link logout" onclick="logout()">Logout</a>
             </li>
         </ul>
     </nav>
@@ -80,7 +80,7 @@
 
             if (sessionStorage.getItem("type") != "A") {
                 sessionStorage.clear();
-                window.location.replace("./login.html");
+                window.location.replace("/login.html");
             }
 
             document.getElementById("wlcMsg").innerHTML = "Welcome " + sessionStorage.getItem("name");
@@ -90,6 +90,10 @@
             }
         }
     </script>
+
+    <!--Logout JavaScript-->
+    <script src="/js/logout.js"></script>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
