--- a/21-01-2021/registeration.html
+++ b/21-01-2021/registeration.html
@@ -116,7 +116,9 @@
                             email: email,
                             password: pass,
                             city: city,
-                            state: state
+                            state: state,
+                            in: "",
+                            out: ""
                         };
                         users.push(user);
 
