--- a/21-01-2021/admin/dashboard.html
+++ b/21-01-2021/admin/dashboard.html
@@ -55,13 +55,13 @@
                 <div class="card bg-warning">
                     <div class="card-body text-center">
                         <p class="card-text">18-50 Years Users</p>
-                        <p class="card-text" id="under18">12 Users</p>
+                        <p class="card-text" id="btwn18_50">12 Users</p>
                     </div>
                 </div>
                 <div class="card bg-success">
                     <div class="card-body text-center">
                         <p class="card-text">Above 50 Years User</p>
-                        <p class="card-text" id="under18">12 Users</p>
+                        <p class="card-text" id="above50">12 Users</p>
                     </div>
                 </div>
             </div>
@@ -76,6 +76,8 @@
     <script>
         var users = [];
 
+        var userNo = [0, 0, 0];
+
         function load() {
 
             if (sessionStorage.getItem("type") != "A") {
@@ -88,12 +90,28 @@
             if (localStorage.getItem('users')) {
                 users = JSON.parse(localStorage.getItem('users'));
             }
+
+            for (var i = 1; i <= userNo.length; i++) {
+                var age = new Date().getYear() - new Date(users[i].birthdate).getYear();
+                if (age < 18) {
+                    userNo[0]++;
+                } else if (age >= 18 && age <= 50) {
+                    userNo[1]++;
+                } else {
+                    userNo[2]++;
+                }
+                document.getElementById("under18").innerHTML = userNo[0] + " Users";
+                document.getElementById("btwn18_50").innerHTML = userNo[1] + " Users";
+                document.getElementById("above50").innerHTML = userNo[2] + " Users";
+
+
+            }
         }
     </script>
 
     <!--Logout JavaScript-->
-
     <script src="/js/logout.js"></script>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
