--- a/21-01-2021/user/dashboard.html
+++ b/21-01-2021/user/dashboard.html
@@ -9,20 +9,33 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style>
+        .logout {
+            cursor: pointer;
+        }
+    </style>
 </head>
 
 <body onload="load()">
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <!-- Brand/logo -->
-        <a class="navbar-brand" id="wlcMsg">USER</a>
+        <a class="navbar-brand" id="wlcMsg"></a>
 
         <!-- Links -->
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Link 1</a>
+                <a class="nav-link logout" onclick="logout()">Logout</a>
             </li>
         </ul>
     </nav>
+
+    <div class="container">
+        <div class="row col-12">
+            <h3 class="col-12 text-center">Welcome To Cybercom Creation</h3>
+            <br><br><br>
+            <h1 id="happyBd" class="col-12 text-center" hidden> Happy Birthday</h1>
+        </div>
+    </div>
 
     <script>
         function load() {
@@ -37,8 +50,23 @@
             if (localStorage.getItem('users')) {
                 users = JSON.parse(localStorage.getItem('users'));
             }
+
+
+            var date = new Date().getDate();
+            var month = new Date().getMonth() + 1;
+
+            if (month == new Date().getMonth() + 1 && date == new Date().getDate()) {
+                document.getElementById("happyBd").hidden = false;
+            }
+
+
         }
     </script>
+
+
+    <!--Logout JavaScript-->
+    <script src="/js/logout.js"></script>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
