--- a/21-01-2021/admin/users.html
+++ b/21-01-2021/admin/users.html
@@ -198,8 +198,8 @@
                     email: email,
                     password: pass,
                     birthdate: bdate,
-                    in: "",
-                    out: ""
+                    lin: "",
+                    lout: ""
                 };
 
                 users.push(user);
