--- a/21-01-2021/login.html
+++ b/21-01-2021/login.html
@@ -64,19 +64,31 @@
 
                         if (users[user].type == "A") {
 
-                            sessionStorage.setItem("obj", users[user]);
                             sessionStorage.setItem("name", users[user].name);
                             sessionStorage.setItem("type", users[user].type);
                             sessionStorage.setItem("id", user);
                             //alert(users[user].email + users[user].password);
                             //alert(sessionStorage.getItem("name") + sessionStorage.getItem("type"));
+
+                            users[user].in = new Date();
+                            localStorage.setItem("users", JSON.stringify(users));
+
                             window.location.replace("admin/dashboard.html");
                         } else {
-                            sessionStorage.setItem("obj", users[user]);
                             sessionStorage.setItem("name", users[user].name);
                             sessionStorage.setItem("type", users[user].type);
                             sessionStorage.setItem("id", user);
+                            sessionStorage.setItem("bd", users[user].birthdate);
+
+                            var d = new Date();
+                            var date = d.getDate() + "/" + d.getMonth() + 1 + "/" + d.getFullYear();
+                            var time = d.getHours() + ":" + d.getUTCMinutes() + ":" + d.getSeconds();
+                            users[user].lin = date + " " + time;
+                            localStorage.setItem("users", JSON.stringify(users));
+
+                            //alert(users[user].lin);
                             window.location.replace("user/dashboard.html");
+
                         }
                     } else {
                         document.getElementById("msg").innerHTML = "Please Enter Correct Email id & Password";
